--- a/notlar.html
+++ b/notlar.html
@@ -37,7 +37,7 @@
       <div class="modal">
         <div class="modal-body">
           <form class="form" autocomplete="off">
-            <textarea cols="35" rows="12" name="not" placeholder="Not" required></textarea><br>
+            <textarea cols="35" rows="12" name="not_icerik" placeholder="Not" required></textarea><br>
             <input type="time" name="not_saati" placeholder="Not Saati" required><br>
             <button class="btn btn-modal">Ekle</button><br><br>
                 <a href="" class="btn-close">İptal</a> 
@@ -50,7 +50,7 @@
       <div class="modal">
         <div class="modal-body">
           <form class="form" autocomplete="off">
-            <textarea cols="35" rows="12" name="not" placeholder="Not" required></textarea><br>
+            <textarea cols="35" rows="12" name="not_icerik" placeholder="Not" required></textarea><br>
             <input type="time" name="not_saati" placeholder="Not Saati" required><br>
             <button class="btn btn-modal">Kaydet</button><br><br>
             <a href="" class="btn-close">İptal</a> 
